Initial commit of REST API app
